Organizando os arquivos em seus devidos lugares e adição de ícones

--- a/Git e Github/Pages/index.html
+++ b/Git e Github/Pages/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../Assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
@@ -28,42 +28,39 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="#"><img src="../Assets/icons/linkedin.svg" alt="" srcset=""></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="#"><img src="../Assets/icons/github.svg" alt="" srcset=""></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        <a class="nav-link " href="#"> <img src="../Assets/icons/instagram.svg" alt="" srcset=""></a>
                     </li>
                 </ul>
             </div>
-
         </div>
     </nav>
+
+
     <div class="container">
-    <center>
-        <div id="g-heading-1" class="g-titles">
-            <h1><strong>Git e Github: o que são? 🧐</strong></h1>
-            <hr>
-        </div>
-    </center>
-    <section id="g-git" class="g-titles">
-        <h2><strong>Git</strong></h2>
-        <p></p>
-    </section>
-    
-    <section id="g-github" class="g-titles">
-        <h2><strong>Github</strong></h2>
-    </section>
-</div>
+        <center>
+            <div id="g-heading-1" class="g-titles">
+                <h1><strong>Git e Github: o que são? 🧐</strong></h1>
+                <hr>
+            </div>
+        </center>
+        <section id="g-git" class="g-titles">
+            <h2><strong>Git</strong></h2>
+            <p></p>
+        </section>
+
+        <section id="g-github" class="g-titles">
+            <h2><strong>Github</strong></h2>
+        </section>
+    </div>
 </body>
 
 </html>
