--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../Git e Github/Assets/css/style.css">
+
+    <link rel="stylesheet" href="./Assets/css/style.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
@@ -31,13 +33,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><img src="../Git e Github/Assets/icons/linkedin.svg" alt="Logo LinkedIn"></a>
+                        <a class="nav-link" href="#"><img src="./Assets/icons/linkedin.svg" alt="Logo LinkedIn"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><img src="../Git e Github/Assets/icons/github.svg" alt=" Github"></a>
+                        <a class="nav-link" href="#"><img src="./Assets/icons/github.svg" alt=" Github"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#"> <img src="../Git e Github/Assets/icons/instagram.svg" alt="Logo Instagram"></a>
+                        <a class="nav-link " href="#"> <img src="./Assets/icons/instagram.svg" alt="Logo Instagram"></a>
                     </li>
                 </ul>
             </div>
