--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><img src="./Assets/icons/linkedin.svg" alt="Logo LinkedIn"></a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/ingrid-coelho-de-abreu-de-souza?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img src="./Assets/icons/linkedin.svg" alt="Logo LinkedIn"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><img src="./Assets/icons/github.svg" alt=" Github"></a>
+                        <a class="nav-link" href="https://github.com/EuIngridSouza"><img src="./Assets/icons/github.svg" alt=" Github"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#"> <img src="./Assets/icons/instagram.svg" alt="Logo Instagram"></a>
+                        <a class="nav-link " href="https://instagram.com/ingridcoelhoab.s?utm_source=qr&igshid=ZDExYjZkNGI0OA=="> <img src="./Assets/icons/instagram.svg" alt="Logo Instagram"></a>
                     </li>
                 </ul>
             </div>
