Complementando readme e adição de ícone ao footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav id="g-nav-1" class="navbar navbar-expand-lg">
         <div class="container-fluid">
 
-            <a class="navbar-brand" href="#">Ingrid Souza</a>
+            <a class="navbar-brand g-titles" href="#">Ingrid Souza</a>
 
             <button class="navbar-toggler" type="button" style="background-color: whitesmoke;" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -48,6 +48,7 @@
 
 
     <div class="container">
+
         <center>
             <div id="g-heading-1" class="g-titles">
                 <h1><strong>Git e Github: o que são? 🧐</strong></h1>
@@ -62,7 +63,12 @@
         <section id="g-github" class="g-titles">
             <h2><strong>Github</strong></h2>
         </section>
+
     </div>
+    <footer>
+        <p>Desenvolvido por Ingrid Souza</p>
+        <a href="mailto:ingridcoelhodeabreu@gmail.com"><img src="./Assets/icons/email.svg">&nbsp;</i>ingridcoelhodeabreu@gmail.com</a></p>
+    </footer>
 </body>
 
 </html>
