Corrigindo tamanha da logo e posicionando no footer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav id="g-nav-1" class="navbar navbar-expand-lg">
         <div class="container-fluid">
 
-            <a class="navbar-brand g-titles" href="#">Ingrid Souza</a>
+            <a class="g-titles" style="font-size: 30px;" href="#">Ingrid Souza</a>
 
             <button class="navbar-toggler" type="button" style="background-color: whitesmoke;" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -140,12 +140,12 @@
     <footer>
 
         <div class="g-footer-logo">
-            <img src="./Assets/image/eu-mascote-int.png" alt="Mascote Github" width="200px" height="210px">
+            <img src="./Assets/image/eu-mascote-int.png" alt="Mascote Github">
         </div>
 
-        <div>
+        <div class="g-footer-info">
             <div>
-                <strong>Desenvolvido por <span style="font-size: 15px;">Ingrid Souza</span></strong>
+                <strong style="font-size: 14px">Desenvolvido por <span style="font-size: 18px;">Ingrid Souza</span></strong>
             </div>
             <br>
             <div>
